--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,6 +148,7 @@ button {
     color: var(--title-color);
 }
 .nav__container {
+    background: var(--body-color);
     margin-left: auto;
 }
 .nav__list {
@@ -178,6 +179,9 @@ button {
     font-weight: var(--font-medium);
     font-size: 1.2rem;
     cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    padding-top: 3px;
 }
 .change-theme:hover {
     color: var(--primary-color);
@@ -191,13 +195,14 @@ button {
 #navToggle {
     display: none;
 }
-#navClose {
+.nav__close {
+    color: var(--primary-color);
     display: none;
 }
 
 /* ========================= home section ========================= */
 .home {
-    padding-top: 3rem;
+    padding-top: 6rem;
     display: flex;
     position: relative;
 }
@@ -220,6 +225,9 @@ button {
     font-size: 1.5rem;
     color: var(--primary-color);
 }
+
+
+/* =========================  ========================= */
 .home__intro {
     flex: 1;
 }
@@ -274,6 +282,10 @@ button {
     justify-content: space-between;
     width: 100%;
 }
+/* .about__info--title {
+    display: inline-block;
+    color: black;
+} */
 .about__download {
     display: flex;
     align-items: center;
@@ -457,10 +469,14 @@ button {
 .service__modal-header {
     display: flex;
     justify-content: space-between;
+    margin-bottom: var(--mb-1);
 }
 .service__modal-header .title {
     font-weight: 500;
     color: var(--black-color);
+}
+.service__modal--item {
+    margin-bottom: var(--mb-1);
 }
 
 /* ========================= portfolio section ========================= */
@@ -494,6 +510,13 @@ button {
 }
 .slider__desc p {
     margin: 1rem 0;
+}
+.slider__buttons {
+    display: flex;
+    justify-content: center;
+}
+.slick__button:first-child {
+    margin-right: var(--mb-1);
 }
 
 /* arrow */
@@ -559,7 +582,6 @@ button {
     cursor: pointer;
 }
 
-
 /* --------------------------------- scroll up --------------------------------- */
 .scrollup {
     position: fixed;
@@ -579,7 +601,6 @@ button {
 .scrollup.visible {
     bottom: 5rem;
 }
-
 
 /* ----------------------- footer ----------------------- */
 .footer {
@@ -645,17 +666,16 @@ button {
     .home.inner {
         padding: 0 4rem;
     }
-    
     .nav__container {
         position: fixed;
         bottom: 0;
         left: 0;
         transform: translateY(100%);
         width: 100%;
-        background: var(--white-color);
         padding: 2rem 1.5rem 4rem;
         box-shadow: 0 0 5px rgba(0,0,0,.5);
         transition: .3s;
+        border-radius: 1.5rem 1.5rem 0 0;
     }
     .nav__container.visible {
         transform: translateY(0);
@@ -675,7 +695,6 @@ button {
         flex-direction: column;
         align-items: center;
     }
-    
     .nav__icon {
         margin-left: 0;
         display: block;
@@ -686,11 +705,6 @@ button {
     #buttonDark {
         margin-right: 1rem;
     }
-    /* #navClose { */
-        /* } */
-    /* #navToggle {
-        
-    }     */
     .nav__close {
         display: block;
         position: absolute;
@@ -718,15 +732,13 @@ button {
         left: 1rem;
         top: 61%;
     }
-    
     /* ----------------------- About ----------------------- */
     .about__download {
         margin-top: var(--mb-1);
     }
-
 }
 
-@media (max-width: 480px){
+@media (max-width: 568px){
     #home {
         flex-direction: column;
     }
@@ -757,7 +769,7 @@ button {
     .skills__item {
         width: auto;
     }
-    
+
     /* ============ qualification =============== */
     .qualification__item {
         width: 80%;
@@ -766,6 +778,14 @@ button {
     /* ============ services =============== */
     .service__content {
         flex-wrap: wrap;
+    }
+    .service__item {
+        margin-right: 2%;
+        width: 49%;
+        flex: auto;
+    }
+    .service__item:nth-child(1) {
+        width: 49%;
     }
     .service__item:nth-child(2) {
         margin-right: 0;
